<resources>
    <string name="app_name">Navigation</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Menu de navegación</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Inicio</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="menu_mision">Visión y Misión</string>
    <string name="menu_valores">Principios y Valores</string>
    <string name="menu_sedes">Sedes</string>
    <string name="menu_work_with_us">Materiales</string>
    <string name="menu_corporate_management">Compromiso</string>
    <string name="menu_contact">Contacto</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>