<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_principal_home"
            android:icon="@drawable/balance"
            android:title="@string/menu_mision" />
        <item
            android:id="@+id/nav_coporate_values"
            android:icon="@drawable/principles_values"
            android:title="@string/menu_valores" />
        <item
            android:id="@+id/nav_site"
            android:icon="@drawable/location"
            android:title="@string/menu_sedes" />

        <item
            android:id="@+id/nav_work_with_us"
            android:icon="@drawable/ic_menu_apartment"
            android:title="@string/menu_work_with_us" />
        <item
            android:id="@+id/nav_corporate_management"
            android:icon="@drawable/ic_menu_recycling"
            android:title="@string/menu_corporate_management" />
        <item
            android:id="@+id/nav_contact"
            android:icon="@drawable/ic_menu_contact_page"
            android:title="@string/menu_contact" />
    </group>
</menu>