<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.navigation.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_work_with_us"
        android:name="com.example.navigation.ui.work_with_us.WorkWithUsFragment"
        android:label="@string/menu_work_with_us"
        tools:layout="@layout/fragment_work_with_us" />

    <fragment
        android:id="@+id/nav_corporate_management"
        android:name="com.example.navigation.ui.corporate_management.CorporateManagementFragment"
        android:label="@string/menu_corporate_management"
        tools:layout="@layout/fragment_corporate_management" />

    <fragment
        android:id="@+id/nav_contact"
        android:name="com.example.navigation.ui.contact.ContactFragment"
        android:label="@string/menu_contact"
        tools:layout="@layout/fragment_contact" />
</navigation>